--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <!-- Google Tag Manager -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KJE5HZV8JS"></script>
     <script>
-        (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-        'https://www.googletagmanager.com/gtm.js?id=GTM-TQWV59VN'+dl;f.parentNode.insertBefore(j,f);
-        })(window,document,'script','dataLayer','GTM-TQWV59VN');
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-KJE5HZV8JS');
     </script>
-    <!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV en ligne de Killian GOILARD</title>
@@ -17,11 +17,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TQWV59VN"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
-    
     <header>
         <img src="Egide.png" alt="Logo" class="logo">
         <h1>Bienvenue sur le CV en ligne de Killian GOILARD</h1>
@@ -42,23 +37,4 @@
         </section>
         <section>
             <h2>Réalisations notables</h2>
-            <p style="text-align: justify;">Je suis particulièrement fier de la visite virtuelle de la gendarmerie car c'est une première en France. Cela relie deux domaines qui me passionnent : la gendarmerie et la réalité virtuelle. Je suis aussi très fier du webinaire car c'était la première fois que je parlais à un public aussi large en direct sur des sujets que je maîtrisais.</p>
-        </section>
-        <section>
-            <h2>Projets futurs</h2>
-            <p style="text-align: justify;">Pour ma future alternance, j'aimerais travailler sur des projets de communication plus précis. Dans la gendarmerie, je suis assez limité par l'institution car on ne peut pas communiquer sur tout n'importe comment. J'aimerais que l'alternance m'apporte de réelles compétences pour réussir dans mon futur bachelor.</p>
-        </section>
-        <section>
-            <h2>Philosophie de travail</h2>
-            <p style="text-align: justify;">J'ai besoin d'une bonne ambiance. L'union fait la force et je suis persuadé qu'un environnement de travail sain est propice à la productivité. On peut s'amuser tout en travaillant, et j'ai besoin d'aller au travail et de m'amuser dans ce que je fais. J'ai aussi besoin de nouveauté, je suis en quête d'apprendre plein de choses.</p>
-        </section>
-        <section>
-            <h2>Technologies utilisées</h2>
-            <p style="text-align: justify;">Ce site a été réalisé grâce à du code HTML et JavaScript généré par ChatGPT et des prompts réalisés par moi.</p>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2024 Killian GOILARD</p>
-    </footer>
-</body>
-</html>
+            <p style="text-align: jus
